# serverless-agent-sandbox-sports-analytics

./: .gitignore  README.md  azure.yaml
infra/: abbreviations.json  main.bicep  main.parameters.json
infra/app/: api.bicep  foundry.bicep  rbac.bicep  sandbox-group-rbac.bicep  sandbox-group.bicep
sample-data/: matches.csv
sample-output/: README.md  dashboard.html  summary.csv
src/: agents.config.yaml  analyst.agent.md  host.json  local.settings.json.sample  pyproject.toml  requirements.txt
src/tools/: _analyst_common.py  run_analysis.py
